react and swagger changes
